--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -73,7 +73,7 @@ a, button {
     width: 100%;
     height: 5%;
     background-color: #fff;
-    transition: padding-bottom 1.2s ease, background-color .3s ease;
+    transition: padding-bottom 0.3s ease, background-color .3s ease;
     position: absolute;
     top: 0;
     left: 0;
@@ -362,7 +362,6 @@ a, button {
     max-width: 260px;
     width: 100%; }
   .donate__products-image {
-    border: 1px solid black;
     width: 224px;
     height: 224px;
     border-radius: 19px;
@@ -539,221 +538,33 @@ a, button {
   .footer .footer_nav_right > a:first-of-type {
     margin-bottom: 10px; }
 
-.modals {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  min-height: 100vh;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 102;
-  padding-top: 10%;
-  padding-bottom: 10%;
-  display: none;
-  overflow-y: scroll; }
-  .modals.active {
-    display: block; }
-  .modals__item {
-    background-color: #F6EFFF;
-    padding: 30px;
-    color: #1C0427;
-    border-radius: 10px;
-    min-height: 200px;
-    position: relative;
-    display: none; }
-    .modals__item.active {
-      display: block; }
-  .modals__title {
-    color: #1C0427;
-    font-size: 20px;
-    color: #490046;
-    text-align: center;
-    margin-bottom: 20px; }
-  .modals [modal-item="buy"] {
-    padding: 69px 85px;
-    text-align: center; }
-  .modals__row {
-    display: flex;
-    justify-content: space-around; }
-  .modals__cart {
-    padding: 45px;
-    background-color: #fff;
-    min-height: 404px;
-    width: 404px;
-    border-radius: 100px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-right: 30px; }
-    .modals__cart-reverse {
-      border-radius: 10px 100px; }
-    .modals__cart:last-child {
-      margin-right: 0; }
-  .modals__product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 50px;
-    background-color: #F7D1F8;
-    padding: 10px 30px;
-    border-radius: 20px; }
-    .modals__product-image {
-      width: 70%;
-      min-width: 150px;
-      height: 105px;
-      border-radius: 5px;
-      z-index: 5;
-      display: flex;
-      align-items: center;
-      justify-content: center; }
-      .modals__product-image img {
-        max-width: 150px;
-        max-height: 105px; }
-    .modals__product-info {
-      padding: 25px 40px;
-      text-align: center;
-      border-radius: 10px 10px 10px 10px;
-      margin-top: -10px; }
-    .modals__product-name {
-      color: #490046;
-      font-size: 16px;
-      margin-bottom: 9px;
-      word-break: break-all; }
-    .modals__product-price {
-      color: #9E0098;
-      font-size: 24px; }
-  .modals__form {
-    width: 100%;
-    padding: 0 20px; }
-  .modals__input {
-    padding: 10px 20px;
-    border-radius: 5px 5px 0 0;
-    width: 100%;
-    outline: unset;
-    border: none;
-    border-bottom: 2px solid #3A0038;
-    background-color: #fff1ff;
-    font-family: inherit; }
-    .modals__input#nickname {
-      margin-bottom: 20px; }
-  .modals__amount {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px; }
-    .modals__amount-control {
-      background-color: #FFEDFF;
-      border-radius: 5px;
-      display: flex;
-      cursor: pointer;
-      transition: background-color .3s ease;
-      position: relative; }
-      .modals__amount-control:hover {
-        background-color: #ffdfff; }
-    .modals__amount-minus {
-      padding: 15px; }
-    .modals__amount-result {
-      background-color: #F7D1F8;
-      padding: 15px 20px;
-      cursor: auto; }
-    .modals__amount-plus {
-      padding: 15px; }
-    .modals__amount.disabled .modals__amount-control::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      border-radius: 5px;
-      background-color: #ff0000;
-      opacity: .3;
-      cursor: not-allowed; }
-  .modals__payment {
-    position: relative;
-    margin-bottom: 30px; }
-    .modals__payment-control {
-      padding: 10px 20px;
-      border-radius: 5px 5px 0 0;
-      border-bottom: 2px solid #3A0038;
-      background-color: #fff1ff;
-      text-align: start;
-      color: rgba(58, 0, 56, 0.7);
-      cursor: pointer;
-      transition: background-color .3s ease;
-      line-height: 170%; }
-      .modals__payment-control:hover {
-        background-color: #ffe2ff; }
-    .modals__payment-selected {
-      color: #f9cdff;
-      padding: 5px;
-      background-color: #160020;
-      border-radius: 3px;
-      margin-left: 10px;
-      font-size: 16px;
-      text-align: start; }
-    .modals__payment-list {
-      display: none;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      transform: translateY(100%);
-      text-align: start;
-      width: 100%;
-      border-radius: 0px 0px 5px 5px;
-      overflow: hidden; }
-      .modals__payment-list.active {
-        display: block; }
-    .modals__payment-item {
-      padding: 5px 20px;
-      background-color: #FB71FF;
-      transition: background-color .3s ease;
-      color: #190025;
-      cursor: pointer; }
-      .modals__payment-item:hover {
-        background-color: #fca5ff; }
-  .modals__button {
-    padding: 16px 67px;
-    border: none;
-    outline: unset;
-    background-color: #F7D1F8;
-    color: #490046;
-    font-family: inherit;
-    box-shadow: 0px 4px 0px rgba(73, 0, 70, 0.25);
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color .3s ease; }
-    .modals__button:hover {
-      background-color: #f7e3f8; }
-  .modals__close {
-    width: 40px;
-    height: 40px;
-    background-color: #190025;
-    transition: background-color .3s ease;
-    border-radius: 5px;
+.modals__close {
+  width: 40px;
+  height: 40px;
+  background-color: #190025;
+  transition: background-color .3s ease;
+  border-radius: 5px;
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+  .modals__close-line {
+    background-color: #FAFAFA;
+    height: 3px;
+    width: 60%;
+    transition: width .3s ease;
+    border-radius: 2px;
     position: absolute;
-    top: 10px;
-    right: 10px; }
-    .modals__close-line {
-      background-color: #FAFAFA;
-      height: 3px;
-      width: 60%;
-      transition: width .3s ease;
-      border-radius: 2px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%); }
-      .modals__close-line:first-child {
-        transform: translateX(-50%) translateY(-50%) rotate(45deg); }
-      .modals__close-line:last-child {
-        transform: translateX(-50%) translateY(-50%) rotate(-45deg); }
-    .modals__close:hover {
-      background-color: #35004e; }
-      .modals__close:hover .modals__close-line {
-        width: 70%; }
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%); }
+    .modals__close-line:first-child {
+      transform: translateX(-50%) translateY(-50%) rotate(45deg); }
+    .modals__close-line:last-child {
+      transform: translateX(-50%) translateY(-50%) rotate(-45deg); }
+  .modals__close:hover {
+    background-color: #35004e; }
+    .modals__close:hover .modals__close-line {
+      width: 70%; }
 
 @media screen and (max-width: 900px) {
   .nav__control-theme, .footer__list {
@@ -821,15 +632,6 @@ a, button {
 
   .nav__control-burger {
     margin-left: 0; } }
-@media screen and (max-width: 450px) {
-  .news__info {
-    font-size: 18px;
-    word-wrap: break-word; }
-    .news__info .textstyle__title {
-      font-size: 20px; }
-
-  .modals__cart {
-    padding: 10px; } }
 .nav.dark {
   background-color: #419EFC; }
 
@@ -852,38 +654,225 @@ a, button {
 .active {
   display: block; }
 
-.popup {
+/* Modal Base CSS */
+.scotch-overlay {
   position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9998;
   top: 0;
   left: 0;
   opacity: 0;
-  visibility: hidden; }
+  width: 100%;
+  height: 100vh;
+  -webkit-transition: 1ms opacity ease;
+  -moz-transition: 1ms opacity ease;
+  -ms-transition: 1ms opacity ease;
+  -o-transition: 1ms opacity ease;
+  transition: 1ms opacity ease;
+  background: rgba(0, 0, 0, 0.7); }
 
-.popup:target {
-  opacity: 1;
-  visibility: visible; }
-
-.popup_body {
-  min-height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px 10px; }
-
-.popup_content {
-  background-color: white;
-  color: black;
-  max-width: 800px;
-  padding: 30px;
-  position: relative; }
-
-.popup_close {
+.scotch-modal {
   position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 20px; }
+  z-index: 9999;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  width: 94%;
+  padding: 24px 20px;
+  -webkit-transition: 1ms opacity ease;
+  -moz-transition: 1ms opacity ease;
+  -ms-transition: 1ms opacity ease;
+  -o-transition: 1ms opacity ease;
+  transition: 1ms opacity ease;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 2px;
+  background: #fff; }
+
+.scotch-modal.scotch-open.scotch-anchored {
+  top: 20px;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0); }
+
+.scotch-modal.scotch-open {
+  opacity: 1; }
+
+.scotch-overlay.scotch-open {
+  opacity: 1; }
+
+/* Close Button */
+.scotch-close {
+  font-family: Helvetica,Arial,sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 12px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 5px 7px 7px;
+  cursor: pointer;
+  color: #fff;
+  border: 0;
+  outline: none;
+  background: #e74c3c; }
+
+.scotch-close:hover {
+  background: #c0392b; }
+
+/* Default Animation */
+.scotch-overlay.fade-and-drop {
+  display: block;
+  opacity: 0; }
+
+.scotch-modal.fade-and-drop {
+  top: -300%;
+  opacity: 1;
+  display: block; }
+
+.scotch-modal.fade-and-drop.scotch-open {
+  top: 100%;
+  -webkit-transition: 500ms top 500ms ease;
+  -moz-transition: 500ms top 500ms ease;
+  -ms-transition: 500ms top 500ms ease;
+  -o-transition: 500ms top 500ms ease;
+  transition: 500ms top 500ms ease; }
+
+.scotch-modal.fade-and-drop.scotch-open.scotch-anchored {
+  -webkit-transition: 500ms top 500ms ease;
+  -moz-transition: 500ms top 500ms ease;
+  -ms-transition: 500ms top 500ms ease;
+  -o-transition: 500ms top 500ms ease;
+  transition: 500ms top 500ms ease; }
+
+.scotch-overlay.fade-and-drop.scotch-open {
+  top: 0;
+  -webkit-transition: 500ms opacity ease;
+  -moz-transition: 500ms opacity ease;
+  -ms-transition: 500ms opacity ease;
+  -o-transition: 500ms opacity ease;
+  transition: 500ms opacity ease;
+  opacity: 1; }
+
+.scotch-modal.fade-and-drop {
+  -webkit-transition: 500ms top ease;
+  -moz-transition: 500ms top ease;
+  -ms-transition: 500ms top ease;
+  -o-transition: 500ms top ease;
+  transition: 500ms top ease; }
+
+.scotch-overlay.fade-and-drop {
+  -webkit-transition: 500ms opacity 500ms ease;
+  -moz-transition: 500ms opacity 500ms ease;
+  -ms-transition: 500ms opacity 500ms ease;
+  -o-transition: 500ms opacity 500ms ease;
+  transition: 500ms opacity 500ms ease; }
+
+#content {
+  display: none; }
+
+.popup_block ._container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between; }
+  .popup_block ._container .left_side {
+    flex-basis: 50%; }
+    .popup_block ._container .left_side .left_side_bg {
+      max-width: 400px;
+      background-color: rgba(210, 247, 255, 0.67);
+      padding: 25px 0 25px 0;
+      margin: auto;
+      border-top-left-radius: 70px;
+      border-bottom-left-radius: 70px;
+      height: 100%; }
+      .popup_block ._container .left_side .left_side_bg .popup_block_img {
+        max-width: 250px;
+        height: 250px;
+        overflow: hidden;
+        border-radius: 15px;
+        margin: auto; }
+        .popup_block ._container .left_side .left_side_bg .popup_block_img img {
+          display: block;
+          width: 100%;
+          object-fit: contain; }
+      .popup_block ._container .left_side .left_side_bg .popup_block_name {
+        margin-top: 15px; }
+        .popup_block ._container .left_side .left_side_bg .popup_block_name p {
+          text-align: center;
+          font-family: 'Montserrat 700', serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 20px;
+          line-height: 28px;
+          color: #000000c9; }
+      .popup_block ._container .left_side .left_side_bg .popup_block_price p {
+        font-family: 'Montserrat 700', serif;
+        color: black;
+        transition: margin-bottom .3s ease;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 24px;
+        text-align: center; }
+  .popup_block ._container .right_side {
+    flex-basis: 50%; }
+    .popup_block ._container .right_side .right_side_bg {
+      max-width: 400px;
+      background-color: rgba(210, 247, 255, 0.67);
+      padding: 25px 0 25px 0;
+      margin: auto;
+      border-top-right-radius: 70px;
+      border-bottom-right-radius: 70px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .popup_block ._container .right_side .right_side_bg .nickname_block {
+        text-align: center;
+        margin-bottom: 10px; }
+        .popup_block ._container .right_side .right_side_bg .nickname_block p {
+          font-family: 'Montserrat 600', serif;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 19px;
+          line-height: 23px;
+          color: #000000; }
+      .popup_block ._container .right_side .right_side_bg .popup_form form {
+        width: 100%;
+        padding: 0 20px; }
+      .popup_block ._container .right_side .right_side_bg .popup_form input {
+        text-align: center;
+        padding: 10px 20px;
+        border-radius: 5px;
+        width: 100%;
+        outline: unset;
+        border: none;
+        background-color: #DEEBFE;
+        font-family: 'Montserrat 500', serif;
+        font-size: 15px;
+        margin-bottom: 10px; }
+      .popup_block ._container .right_side .right_side_bg .popup_form button {
+        margin: auto;
+        display: block;
+        width: 100%;
+        padding: 15px 5px;
+        border: none;
+        outline: unset;
+        background-color: #419EFC;
+        color: white;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        font-family: inherit;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color .3s ease; }
+        .popup_block ._container .right_side .right_side_bg .popup_form button:hover {
+          opacity: 0.7; }
 
 /*# sourceMappingURL=main.css.map */
